# Federated-Machine-Learning-based-on-Variational-Inference

./: README.md  create_clients.sh
bayonese_rust/: Cargo.toml
bayonese_rust/src/: client.rs  communication.rs  distributions.rs  lib.rs  server.rs
bayonese_rust/src/communication/: protocol.rs  tls.rs
bayonese_server_example/: Cargo.toml  example_run.sh
bayonese_server_example/src/: main.rs
certs_tfg/: Client1.crt  Client1.pem  Client10.crt  Client10.pem  Client2.crt  Client2.pem  Client3.crt  Client3.pem  Client4.crt  Client4.pem  Client5.crt  Client5.pem  Client6.crt  Client6.pem  Client7.crt  Client7.pem  Client8.crt  Client8.pem  Client9.crt  Client9.pem  Root_CA_TFG.crt  Root_CA_TFG.pem  Server_Certificate.crt  Server_Certificate.pem  database_xca.xdb
client_python/: Cargo.toml  client_example.py  pyproject.toml
client_python/src/: compat.rs  lib.rs
data/: async_poc_losses.data  async_poc_results.txt  async_regression_losses.data  async_regression_results.txt  sequential_poc_losses.data  sequential_poc_results.txt  sequential_regression_losses.data  sequential_regression_results.txt  synchronous_poc_losses.data  synchronous_poc_results.txt  synchronous_regression_losses.data  synchronous_regression_results.txt
