[package]
name = "bayonese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
futures = "0.3.30"
rustls = { version = "0.23.5", features = ["ring"], default-features = false }
webpki-roots = "0.26.1"
x509-parser = "0.16.0"
tokio-rustls = { version = "0.26.0", features = ["ring"], default-features = false }
tokio-serde = { version = "0.9.0", features = ["json", "bincode", "cbor", "messagepack"] }
serde_json = "1.0.117"
rustls-pemfile = "2.1.2"
anyhow = "1.0.83"
rustls-webpki = "0.102.3"
chrono = { version = "0.4.38", features = ["serde"] }
ndarray = { version = "0.15.6", features = ["serde"] }
nalgebra = { version = "0.32.5", features = ["serde-serialize"] }
fxhash = "0.2.1"